[package]
name = "advent_of_code"
version = "0.10.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
array_tool = "1.0.3"

# Template dependencies
chrono = { version = "0.4.31", optional = true }
dhat = { version = "0.3.2", optional = true }
itertools = "0.12.0"
lazy_static = "1.4.0"
memoize = "0.4.1"
nalgebra = "0.32.3"
num = "0.4.1"
paste = "1.0.14"
pathfinding = "4.6.0"
pico-args = "0.5.0"
rayon = "1.8.0"
regex = "1.10.2"
tinyjson = "2.5.1"

# Solution dependencies
